# twmcp

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.specify/memory/: constitution.md
specs/001-mcp-config-compiler/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mcp-config-compiler/checklists/: requirements.md
specs/001-mcp-config-compiler/contracts/: cli-contract.md
specs/002-interactive-server-select/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-interactive-server-select/checklists/: requirements.md
specs/002-interactive-server-select/contracts/: cli-contract.md
specs/003-mcp-to-toml/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-mcp-to-toml/checklists/: requirements.md
specs/003-mcp-to-toml/contracts/: cli-contract.md
specs/004-edit-config-command/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-edit-config-command/checklists/: requirements.md
specs/005-simplify-select/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-simplify-select/checklists/: requirements.md
specs/006-local-agent-configs/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-local-agent-configs/checklists/: requirements.md
specs/007-configurable-config-paths/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-configurable-config-paths/checklists/: requirements.md
specs/007-configurable-config-paths/contracts/: cli-behavior.md  config-schema.md
specs/008-server-profiles/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-server-profiles/checklists/: requirements.md
specs/008-server-profiles/contracts/: cli-behavior.md
src/twmcp/: __init__.py  agents.py  cli.py  compiler.py  config.py  editor.py  extractor.py  interpolate.py  selector.py
tests/: conftest.py  test_agents.py  test_cli.py  test_compiler.py  test_config.py  test_editor.py  test_extractor.py  test_interpolate.py  test_selector.py
tests/fixtures/: claude_desktop.json  flat_servers.json  no_dotenv_config.toml  sample_config.toml  sample_config_with_overrides.toml  sample_config_with_profiles.toml  sample_secrets.env  secrets.env  vscode_mcp.json  with_secrets.json  with_unknown_props.json
tests/fixtures/expected/: claude-desktop.json  (+2 more)
