[project]
name = "twmcp"
version = "1.0.0"
description = "MCP configuration compiler for multiple AI agents"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "sysid", email = "sysid@gmx.de" },
]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "typer>=0.15",
    "simple-term-menu>=1.6",
]

[project.scripts]
twmcp = "twmcp.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "pre-commit>=4.0.0",
    "bump-my-version>=0.28.0",
    "build>=1.2.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["twmcp*"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
    "experimentation: marks tests as experimental tests, not to be run in CICD",
]

[tool.coverage.run]
source = ["twmcp"]
omit = [
    "tests/*",
    "**/__main__.py",
    "**/.venv/*",
    "**/site-packages/*",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"
exclude = [
    ".direnv", ".eggs", ".git", ".mypy_cache", ".pytest_cache",
    ".ruff_cache", ".venv", "__pypackages__", "build", "dist",
    "node_modules", "site-packages", "venv",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bumpversion]
current_version = "1.0.0"
commit = true
tag = false
tag_name = "v{new_version}"
message = "Bump version to {new_version}"

[tool.bumpversion.file_patterns]
"src/twmcp/__init__.py" = [
    {search = "__version__ = '{current_version}'", replace = "__version__ = '{new_version}'"},
]
"VERSION" = [
    {search = "{current_version}", replace = "{new_version}"},
]
"pyproject.toml" = [
    {search = "version = {current_version}", replace = "version = {new_version}"},
]

[[tool.bumpversion.files]]
filename = "VERSION"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "src/twmcp/__init__.py"
